feat: add photo and some code

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Ruslan</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
+    <header>
+        <nav class="aboutme">
+            <ul>
+              <li>Contacts</li>
+              <li>Education</li>
+              <li>Work experience</li>
+            </ul>
+          </nav>
+    </header>
+    <img src="assets/img/R3007.jpg" alt="cv photo"  class="myphoto">
     <p>
         In the process of writing my CV 
     </p>
