feat: add header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 <body>
     <header>
-        <nav class="aboutme">
-            <ul>
-              <li>Contacts</li>
-              <li>Education</li>
-              <li>Work experience</li>
-            </ul>
+        <nav class="header">
+            <p>
+                <span class="spanh">About Me</span>
+                <span class="spanh">Contacts</span>
+                <span class="spanh">Education</span>
+                <span class="spanh">Work experience</span>
+                <span class="spanh">Skills</span>
+                <span class="spanh">Language skills</span>
+            </p>
           </nav>
     </header>
     <img src="assets/img/R3007.jpg" alt="cv photo"  class="myphoto">
