--- a/index.html
+++ b/index.html
@@ -10,21 +10,84 @@
 </head>
 <body>
     <header>
-        <nav class="header">
+        <nav class="nav-list">
             <p>
-                <span class="spanh">About Me</span>
-                <span class="spanh">Contacts</span>
-                <span class="spanh">Education</span>
-                <span class="spanh">Work experience</span>
-                <span class="spanh">Skills</span>
-                <span class="spanh">Language skills</span>
+                <span class="nav-link">About me</span>
+                <span class="nav-link">Contacts</span>
+                <span class="nav-link">Education</span>
+                <span class="nav-link">Work experience</span>
+                <span class="nav-link">Skills</span>
+                <span class="nav-link">Language skills</span>
             </p>
           </nav>
     </header>
-    <img src="assets/img/R3007.jpg" alt="cv photo"  class="myphoto">
-    <p>
-        In the process of writing my CV 
-    </p>
-    
+    <main>
+        <section>
+           <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">
+               <p>
+                 <h1>Ruslan Shcherbo</h1>
+               </p>
+               <p>
+                E-mail: r.shcherbo@gmail.com
+                Telegram: <a href="https://t.me/R3007cfg">https://t.me/R3007cfg</a>
+                Guthub: <a href="https://github.com/R3007">R3007</a>
+              </p>
+        </section>
+
+        <section>
+            <h2>About Me</h2>
+            <p>Hello, I'm Ruslan. Since 2004 I have been working in various teams, often in leadership positions. I always complete assigned tasks on time. I know how to organize my work and the work of my subordinates.</p>
+        </section>
+
+        <section>
+            <h2>Education</h2>
+                <h3>2000-2004</h3>
+                    <p>Republican Institute of Vocational Education</p>
+        </section>
+
+        <section>
+            <h2>Work experience</h2>
+                <h3>2020-Present</h3>
+                    <p>Vehicle dispatcher. Private enterprise "Flagmanbus".</p> 
+                <h3>2011-2020</h3>
+                    <p>Auto Parts Sales Manager. Autocentre "Vostok-Motors".</p>
+                <h3>2009-2011</h3>
+                    <p>Director. Private enterprise "Avtosnabpostavka".</p>
+                <h3>2004-2009</h3>
+                    <p>Master mechanic. Minsk Automobile Plant.</p>
+        </section>
+
+        <section>
+            <ul><h2>Language skills</h2></ul>
+                <li>Russian - Native</li>
+                <li>English - Pre-Intermediate</li>
+        </section>
+
+        <section>
+            <ul><h2>Skills</h2></ul>
+                <li>HTML - In progress</li>
+                <li>CSS - In progress</li>
+                <li>JavaScript - In progress</li>
+        </section>
+
+        <section>     
+            <h2>Code</h2>
+            <p><code>
+                function multiply (a, b) {<Br>
+                    return a * b<Br>
+                }</code></p>
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
