feat: add some code

--- a/index.html
+++ b/index.html
@@ -16,36 +16,35 @@
                 <span class="nav-link">Contacts</span>
                 <span class="nav-link">Education</span>
                 <span class="nav-link">Work experience</span>
-                <span class="nav-link">Skills</span>
                 <span class="nav-link">Language skills</span>
+                <span class="nav-link">Skills</span>
             </p>
-          </nav>
+        </nav>
     </header>
+
     <main>
         <section>
-           <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">
-               <p>
-                 <h1>Ruslan Shcherbo</h1>
-               </p>
-               <p>
-                E-mail: r.shcherbo@gmail.com
-                Telegram: <a href="https://t.me/R3007cfg">https://t.me/R3007cfg</a>
-                Guthub: <a href="https://github.com/R3007">R3007</a>
-              </p>
+            <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">
+                <div class="contacts">
+                <p><h1>Ruslan Shcherbo</h1></p>
+                <p>E-mail: r.shcherbo@gmail.com</p>
+                <p>Telegram: <a href="https://t.me/R3007cfg" target="_blank">https://t.me/R3007cfg</a></p>
+                <p>Guthub: <a href="https://github.com/R3007" target="_blank">R3007</a></p>   
+            </div>
         </section>
 
-        <section>
+        <section class="summary">
             <h2>About Me</h2>
             <p>Hello, I'm Ruslan. Since 2004 I have been working in various teams, often in leadership positions. I always complete assigned tasks on time. I know how to organize my work and the work of my subordinates.</p>
         </section>
 
-        <section>
+        <section class="education">
             <h2>Education</h2>
                 <h3>2000-2004</h3>
                     <p>Republican Institute of Vocational Education</p>
         </section>
 
-        <section>
+        <section class="experience">
             <h2>Work experience</h2>
                 <h3>2020-Present</h3>
                     <p>Vehicle dispatcher. Private enterprise "Flagmanbus".</p> 
@@ -57,20 +56,20 @@
                     <p>Master mechanic. Minsk Automobile Plant.</p>
         </section>
 
-        <section>
+        <section class="languages">
             <ul><h2>Language skills</h2></ul>
                 <li>Russian - Native</li>
                 <li>English - Pre-Intermediate</li>
         </section>
 
-        <section>
+        <section class="skills">
             <ul><h2>Skills</h2></ul>
                 <li>HTML - In progress</li>
                 <li>CSS - In progress</li>
                 <li>JavaScript - In progress</li>
         </section>
 
-        <section>     
+        <section class="code">     
             <h2>Code</h2>
             <p><code>
                 function multiply (a, b) {<Br>
@@ -79,7 +78,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
