feat: add links and some flex

--- a/index.html
+++ b/index.html
@@ -9,42 +9,40 @@
     <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
-    <header>
-        <nav class="nav-list">
-            <p>
-                <span class="nav-link">About me</span>
-                <span class="nav-link">Contacts</span>
-                <span class="nav-link">Education</span>
-                <span class="nav-link">Work experience</span>
-                <span class="nav-link">Language skills</span>
-                <span class="nav-link">Skills</span>
-            </p>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <p class="nav-list">
+                    <span class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></span>
+                    <span class="nav-item"><a href="#summary" class="nav-link">About me</a></span>
+                    <span class="nav-item"><a href="#education" class="nav-link">Education</a></span>
+                    <span class="nav-item"><a href="#experience" class="nav-link">Work experience</a></span>
+                    <span class="nav-item"><a href="#languages" class="nav-link">Language skills</a></span>
+                    <span class="nav-item"><a href="#skills" class="nav-link">Skills</a></span>
+                </p>
+              </nav>
+        </div>
     </header>
-
-    <main>
-        <section>
-            <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">
-                <div class="contacts">
-                <p><h1>Ruslan Shcherbo</h1></p>
-                <p>E-mail: r.shcherbo@gmail.com</p>
-                <p>Telegram: <a href="https://t.me/R3007cfg" target="_blank">https://t.me/R3007cfg</a></p>
-                <p>Guthub: <a href="https://github.com/R3007" target="_blank">R3007</a></p>   
-            </div>
-        </section>
-
-        <section class="summary">
+                <div class="contacts" id="contacts">
+                    <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
+                    <p><h1>Ruslan Shcherbo</h1></p>
+                    <p>E-mail: r.shcherbo@gmail.com</p>
+                    <p>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></p>
+                    <p>Guthub: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></p>                  
+                </div>
+    <main class="main-container">
+        <section class="section" id="summary">
             <h2>About Me</h2>
             <p>Hello, I'm Ruslan. Since 2004 I have been working in various teams, often in leadership positions. I always complete assigned tasks on time. I know how to organize my work and the work of my subordinates.</p>
         </section>
 
-        <section class="education">
+        <section class="section" id="education">
             <h2>Education</h2>
                 <h3>2000-2004</h3>
                     <p>Republican Institute of Vocational Education</p>
         </section>
 
-        <section class="experience">
+        <section class="section" id="experience">
             <h2>Work experience</h2>
                 <h3>2020-Present</h3>
                     <p>Vehicle dispatcher. Private enterprise "Flagmanbus".</p> 
@@ -56,29 +54,33 @@
                     <p>Master mechanic. Minsk Automobile Plant.</p>
         </section>
 
-        <section class="languages">
+        <section class="section" id="languages">
             <ul><h2>Language skills</h2></ul>
                 <li>Russian - Native</li>
                 <li>English - Pre-Intermediate</li>
         </section>
 
-        <section class="skills">
+        <section class="section" id="skills">
             <ul><h2>Skills</h2></ul>
                 <li>HTML - In progress</li>
                 <li>CSS - In progress</li>
                 <li>JavaScript - In progress</li>
         </section>
 
-        <section class="code">     
+        <section class="section">     
             <h2>Code</h2>
             <p><code>
                 function multiply (a, b) {<Br>
                     return a * b<Br>
-                }</code></p>
+                }</code>
+            </p>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="container">
 
+
+        </div>
     </footer>
 </body>
 </html>
