feat: add header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p><h1>Ruslan Shcherbo</h1></p>
                     <p>E-mail: r.shcherbo@gmail.com</p>
                     <p>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></p>
-                    <p>Guthub: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></p>                  
+                    <p>Github: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></p>                  
                 </div>
     <main class="main-container">
         <section class="section" id="summary">
