feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>CV Ruslan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto+Condensed&family=Tai+Heritage+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -77,7 +80,13 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container" id="div-footer">
+            <nav class="nav-footer">
+                <ul class="ul-footer">
+                    <li class="lifooter"><span class="span-footer">&#169;</span><span class="span-footer">2022</span><span class="span-footer">R3007</span></li>
+                    <li class="lifooter"><img src="assets/img/logo-rsschool3.png" alt="logo-rsschool" class="logo-school"></li>
+                </ul>
+            </nav>
 
 
         </div>
