feat: add links in footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
     </header>
                 <div class="contacts" id="contacts">
                     <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
-                    <p><h1>Ruslan Shcherbo</h1></p>
+                    <h1>Ruslan Shcherbo</h1>
                     <p>E-mail: r.shcherbo@gmail.com</p>
                     <p>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></p>
                     <p>Github: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></p>                  
@@ -42,7 +42,7 @@
         <section class="section" id="education">
             <h2>Education</h2>
                 <h3>2000-2004</h3>
-                    <p>Republican Institute of Vocational Education</p>
+                    <p>Republican Institute of Vocational Education. Minsk, Belarus</p>
         </section>
 
         <section class="section" id="experience">
@@ -58,16 +58,20 @@
         </section>
 
         <section class="section" id="languages">
-            <ul><h2>Language skills</h2></ul>
-                <li>Russian - Native</li>
-                <li>English - Pre-Intermediate</li>
+            <h2>Language skills</h2>
+                <ul>
+                    <li>Russian - Native</li>
+                    <li>English - Pre-Intermediate</li>
+                </ul>
         </section>
 
         <section class="section" id="skills">
-            <ul><h2>Skills</h2></ul>
-                <li>HTML - In progress</li>
-                <li>CSS - In progress</li>
-                <li>JavaScript - In progress</li>
+            <h2>Skills</h2>
+                <ul>
+                    <li>HTML - In progress</li>
+                    <li>CSS - In progress</li>
+                    <li>JavaScript - In progress</li>
+                </ul>
         </section>
 
         <section class="section">     
@@ -83,8 +87,8 @@
         <div class="container" id="div-footer">
             <nav class="nav-footer">
                 <ul class="ul-footer">
-                    <li class="lifooter"><span class="span-footer">&#169;</span><span class="span-footer">2022</span><span class="span-footer">R3007</span></li>
-                    <li class="lifooter"><img src="assets/img/logo-rsschool3.png" alt="logo-rsschool" class="logo-school"></li>
+                    <li class="lifooter"><span class="span-footer">&#169;</span><span class="span-footer">2022</span><span class="span-footer"><a href="https://github.com/R3007" class="a-footer" target="_blank">R3007</a></span></li>
+                    <li class="lifooter"><a href="https://rs.school/js/" class="a-footer" target="_blank"><img src="assets/img/logo-rsschool3.png" alt="logo-rsschool" class="logo-school"></a></li>
                 </ul>
             </nav>
 
