feat: fix header

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <p class="nav-list">
-                    <span class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></span>
-                    <span class="nav-item"><a href="#summary" class="nav-link">About me</a></span>
-                    <span class="nav-item"><a href="#education" class="nav-link">Education</a></span>
-                    <span class="nav-item"><a href="#experience" class="nav-link">Work experience</a></span>
-                    <span class="nav-item"><a href="#languages" class="nav-link">Language skills</a></span>
-                    <span class="nav-item"><a href="#skills" class="nav-link">Skills</a></span>
-                </p>
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#experience" class="nav-link">Work experience</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Language skills</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                </ul>
               </nav>
         </div>
     </header>
