feat: fix contacts

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <div class="contacts" id="contacts">
                     <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
                     <h1>Ruslan Shcherbo</h1>
-                    <p>E-mail: r.shcherbo@gmail.com</p>
-                    <p>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></p>
-                    <p>Github: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></p>                  
+                        <ul class="ul-contacts">
+                            <li>E-mail: r.shcherbo@gmail.com</li>
+                            <li>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></li>
+                            <li>Github: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></li>
+                        </ul>                
                 </div>
     <main class="main-container">
         <section class="section" id="summary">
