feat: add some code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto+Condensed&family=Tai+Heritage+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -23,18 +24,20 @@
                     <li class="nav-item"><a href="#languages" class="nav-link">Language skills</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                 </ul>
-              </nav>
+            </nav>
         </div>
+
     </header>
-                <div class="contacts" id="contacts">
-                    <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
-                    <h1>Ruslan Shcherbo</h1>
-                        <ul class="ul-contacts">
-                            <li>E-mail: r.shcherbo@gmail.com</li>
-                            <li>Telegram: <a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></li>
-                            <li>Github: <a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></li>
-                        </ul>                
-                </div>
+        <div class="contacts" id="contacts">
+            <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
+            <h1>Ruslan Shcherbo</h1>
+                <ul class="ul-contacts">
+                    <li>E-mail: r.shcherbo@gmail.com</li>
+                    <li>Telegram:<a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></li>
+                    <li>Github:<a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></li>
+                </ul>                
+        </div>
+
     <main class="main-container">
         <section class="section" id="summary">
             <h2>About Me</h2>
@@ -78,13 +81,14 @@
 
         <section class="section">     
             <h2>Code</h2>
-            <p><code>
+            <p class="code"><code>
                 function multiply (a, b) {<Br>
                     return a * b<Br>
                 }</code>
             </p>
         </section>
     </main>
+    
     <footer class="footer">
         <div class="container" id="div-footer">
             <nav class="nav-footer">
