feat: change footer

--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
         <div class="container" id="div-footer">
             <nav class="nav-footer">
                 <ul class="ul-footer">
-                    <li class="lifooter"><span class="span-footer">&#169;</span><span class="span-footer">2022</span><span class="span-footer"><a href="https://github.com/R3007" class="a-footer" target="_blank">R3007</a></span></li>
+                    <li class="lifooter" id="lifooter1">&#169;</li>
+                    <li class="lifooter" id="lifooter2">2022</li>
+                    <li class="lifooter"><a href="https://github.com/R3007" class="a-footer" target="_blank">R3007</a></li>
                     <li class="lifooter"><a href="https://rs.school/js/" class="a-footer" target="_blank"><img src="assets/img/logo-rsschool3.png" alt="logo-rsschool" class="logo-school"></a></li>
                 </ul>
             </nav>
-
-
         </div>
     </footer>
+
 </body>
 </html>
 
