feat: thats all

--- a/index.html
+++ b/index.html
@@ -26,22 +26,25 @@
                 </ul>
             </nav>
         </div>
-
     </header>
+
         <div class="contacts" id="contacts">
             <img src="assets/img/R3007.jpg" alt="cv photo" class="myphoto">                    
-            <h1>Ruslan Shcherbo</h1>
+            <nav class="nav-contacts">
+                <h1>Ruslan Shcherbo</h1>
                 <ul class="ul-contacts">
                     <li>E-mail: r.shcherbo@gmail.com</li>
-                    <li>Telegram:<a href="https://t.me/R3007cfg" class="contact-link" target="_blank">https://t.me/R3007cfg</a></li>
-                    <li>Github:<a href="https://github.com/R3007" class="contact-link" target="_blank">R3007</a></li>
-                </ul>                
+                    <li>Telegram:<a href="https://t.me/R3007cfg" class="contact-link" target="_blank"> https://t.me/R3007cfg</a></li>
+                    <li>Github:<a href="https://github.com/R3007" class="contact-link" target="_blank"> R3007</a></li>
+                </ul>
+            </nav>                    
         </div>
 
     <main class="main-container">
+
         <section class="section" id="summary">
             <h2>About Me</h2>
-            <p>Hello, I'm Ruslan. Since 2004 I have been working in various teams, often in leadership positions. I always complete assigned tasks on time. I know how to organize my work and the work of my subordinates.</p>
+                <p>Hello, I'm Ruslan. Since 2004 I have been working in various teams, often in leadership positions. I always complete assigned tasks on time. I know how to organize my work and the work of my subordinates.</p>
         </section>
 
         <section class="section" id="education">
@@ -68,25 +71,34 @@
                     <li>Russian - Native</li>
                     <li>English - Pre-Intermediate</li>
                 </ul>
+                <br>
+                <br>
+            <h2>My projects</h2>
+                <ul>
+                    <li><a href="https://R3007.github.io/rsschool-cv/" class="contact-link" target="_blank">My CV</a></li>
+                </ul>
         </section>
 
         <section class="section" id="skills">
             <h2>Skills</h2>
                 <ul>
-                    <li>HTML - In progress</li>
-                    <li>CSS - In progress</li>
-                    <li>JavaScript - In progress</li>
+                    <li>HTML - Basic</li>
+                    <li>CSS - Basic</li>
+                    <li>JavaScript - Basic</li>
                 </ul>
         </section>
 
         <section class="section">     
             <h2>Code</h2>
-            <p class="code"><code>
-                function multiply (a, b) {<Br>
+                <p class="code">
+                    <code>
+                    function multiply (a, b) {<Br>
                     return a * b<Br>
-                }</code>
-            </p>
+                    }
+                    </code>
+                </p>
         </section>
+    
     </main>
     
     <footer class="footer">
